Backport commits 688956 and 689037 from enterprise branch (crash fixes for folder moving).

I'm aware that this breaks the message freeze, but an untranslated error
message seems to be a better option than a potentially dangerous crash.

BUG: 143869

svn path=/branches/KDE/3.5/kdepim/; revision=689500